# email_helper

./: Getting Access to the Gmail API.md
back-end/: mails.sql  pyproject.toml
back-end/app/: credentials.json  event.py  main.py  processtext.py  schema.py  service.json
back-end/app/models/: __init__.py  mail.py  session.py
emailenv/: pyvenv.cfg
front-end/my-app/: package-lock.json  package.json
front-end/my-app/src/: App.js  AuthContext.js  DraftForm.css  DraftForm.js  OAuth.css  OAuth.js
